kubernetes-networks/canary/web-deploy-canary.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web-canary # Название нашего объекта Deployment
  namespace: canary
spec:
  replicas: 1 # Начнем с одного пода
  selector: # Укажем, какие поды относятся к нашему Deployment:
    matchLabels: # - это поды с меткой
      app: web-canary # app и ее значением web
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 0
      maxSurge: 100%
  template: # Теперь зададим шаблон конфигурации пода
    metadata:
      name: web-canary # Название Pod
      labels: # Метки в формате key: value
        app: web-canary
    spec: # Описание Pod
      containers: # Описание контейнеров внутри Pod
      - name: web-canary # Название контейнера
        image: subnature/otus-docker:v1.1 # Образ из которого создается контейнер
        readinessProbe: # Добавим проверку готовности
          httpGet: # веб-сервера отдавать
            path: /index.html # контент
            port: 8000
        livenessProbe:
          tcpSocket: {port: 8000}
        volumeMounts:
        - name: app
          mountPath: /app
      volumes:
      - name: app
        emptyDir: {}
